Bug 1818227 - Prevent drawing backplate when forced-color-adjust is none r=emilio

Prevents backplates from being drawn for any text that has forced-color-adjust: none set by checking the value of StyleText()->mForcedColorAdjust.

Differential Revision: https://phabricator.services.mozilla.com/D173362